--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,6 +17,13 @@ jobs:
           go-version: '^1.16.0'
       - name: Build
         run: "go build"
+  build_docker_image:
+    runs-on: ubuntu-20.04
+    name: Build Docker image
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - name: Build Docker image
+        run: docker build -tshelly .
   static_analysis:
     runs-on: ubuntu-20.04
     name: Run static analysis and linting
