--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,5 +1,7 @@
 name: CI
 
+permissions: read-all
+
 on:
   push:
     branches:
@@ -15,15 +17,11 @@ jobs:
       - uses: actions/setup-go@v2.1.3
         with:
           go-version: '^1.16.0'
-      - name: Build
-        run: "go build"
-  build_docker_image:
-    runs-on: ubuntu-20.04
-    name: Build Docker image
-    steps:
-      - uses: actions/checkout@v2.3.4
-      - name: Build Docker image
-        run: docker build -tshelly .
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2.7.0
+        with:
+          version: latest
+          args: release --snapshot --rm-dist
   static_analysis:
     runs-on: ubuntu-20.04
     name: Run static analysis and linting
