--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -17,6 +17,14 @@ jobs:
         uses: actions/setup-go@v2.1.3
         with:
           go-version: '^1.16.0'
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v1.0.0
+      - name: Install Cosign private key
+        env:
+          COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
+        run: echo "$COSIGN_PRIVATE_KEY" > /dev/shm/cosign_private_key
+      - name: Log into ghcr.io
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2.7.0
         with:
@@ -24,3 +32,13 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
+          COSIGN_EXPERIMENTAL: 1
+      - name: Sign Docker images
+        env:
+          COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
+          COSIGN_EXPERIMENTAL: 1
+        run: cosign sign -key /dev/shm/cosign_private_key -r ghcr.io/lesuisse/shelly-ht-action-prometheus:latest
+      - name: Remove installed Cosign private key
+        run: rm /dev/shm/cosign_private_key
+        if: ${{ always() }}
