--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -7,18 +7,15 @@ on:
 
 jobs:
   goreleaser:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # tag=v3.3.0
         with:
           fetch-depth: 0
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - uses: cachix/install-nix-action@daddc62a2e67d1decb56e028c9fa68344b9b7c2a # tag=v18
         with:
-          go-version: '^1.16.0'
-      - name: Install Cosign
-        uses: sigstore/cosign-installer@v2.8.1
+          nix_path: nixpkgs=channel:nixpkgs-unstable
       - name: Install Cosign private key
         env:
           COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
@@ -26,10 +23,7 @@ jobs:
       - name: Log into ghcr.io
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v4.1.0
-        with:
-          version: latest
-          args: release --rm-dist
+        run: nix develop --command goreleaser release --snapshot --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
@@ -38,7 +32,7 @@ jobs:
         env:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
           COSIGN_EXPERIMENTAL: 1
-        run: cosign sign -key /dev/shm/cosign_private_key -r ghcr.io/lesuisse/shelly-ht-action-prometheus:latest
+        run: nix develop --command cosign sign -key /dev/shm/cosign_private_key -r ghcr.io/lesuisse/shelly-ht-action-prometheus:latest
       - name: Remove installed Cosign private key
         run: rm /dev/shm/cosign_private_key
         if: ${{ always() }}
