--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -21,9 +21,7 @@ jobs:
       - uses: cachix/install-nix-action@4b933aa7ebcc94a6174cf1364864e957b4910265 # tag=v21
         with:
           nix_path: nixpkgs=channel:nixpkgs-unstable
-      - name: Log into ghcr.io
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Run GoReleaser
-        run: nix develop --command goreleaser release --snapshot --rm-dist
+        run: nix develop --command goreleaser release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
