--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,42 +18,23 @@ builds:
     ldflags:
       - -s -w
 
-dockers:
-  - image_templates:
-      - 'ghcr.io/lesuisse/{{ .ProjectName }}:{{ .Version }}-amd64'
-    dockerfile: Dockerfile
-    use: buildx
-    build_flag_templates:
-      - "--pull"
-      - "--label=org.opencontainers.image.created={{ .Date }}"
-      - "--label=org.opencontainers.image.name={{ .ProjectName }}"
-      - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
-      - "--label=org.opencontainers.image.version={{ .Version }}"
-      - "--label=org.opencontainers.image.source={{ .GitURL }}"
-      - "--platform=linux/amd64"
-    goarch: amd64
-  - image_templates:
-      - 'ghcr.io/lesuisse/{{ .ProjectName }}:{{ .Version }}-arm64'
-    dockerfile: Dockerfile
-    use: buildx
-    build_flag_templates:
-      - "--pull"
-      - "--label=org.opencontainers.image.created={{ .Date }}"
-      - "--label=org.opencontainers.image.name={{ .ProjectName }}"
-      - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
-      - "--label=org.opencontainers.image.version={{ .Version }}"
-      - "--label=org.opencontainers.image.source={{ .GitURL }}"
-      - "--platform=linux/arm64"
-    goarch: arm64
-docker_manifests:
-  - name_template: 'ghcr.io/lesuisse/{{ .ProjectName }}:{{ .Version }}'
-    image_templates:
-      - 'ghcr.io/lesuisse/{{ .ProjectName }}:{{ .Version }}-amd64'
-      - 'ghcr.io/lesuisse/{{ .ProjectName }}:{{ .Version }}-arm64'
-  - name_template: 'ghcr.io/lesuisse/{{ .ProjectName }}:latest'
-    image_templates:
-      - 'ghcr.io/lesuisse/{{ .ProjectName }}:{{ .Version }}-amd64'
-      - 'ghcr.io/lesuisse/{{ .ProjectName }}:{{ .Version }}-arm64'
+kos:
+  - repository: 'ghcr.io/lesuisse/shelly-ht-action-prometheus'
+    tags:
+      - '{{.Version}}'
+      - latest
+    bare: true
+    creation_time: '{{ .CommitTimestamp }}'
+    ko_data_creation_time: '{{ .CommitTimestamp }}'
+    preserve_import_paths: false
+    platforms:
+      - linux/amd64
+      - linux/arm64
+
+docker_signs:
+  - artifacts: manifests
+    cmd: cosign
+    args: ["sign", "${artifact}@${digest}", "--yes"]
 
 signs:
   - id: cosign-keyless
