--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,7 +30,5 @@ jobs:
       - uses: cachix/install-nix-action@4b933aa7ebcc94a6174cf1364864e957b4910265 # tag=v21
         with:
           nix_path: nixpkgs=channel:nixpkgs-unstable
-      - name: Go fmt
-        run: nix develop --command sh -c 'diff -u <(echo -n) <(gofmt -d -s *.go ./)'
-      - name: Go vet
-        run: nix develop --command go vet ./...
+      - name: golangci-lint
+        run: nix develop --command golangci-lint run
