--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -21,6 +21,12 @@ jobs:
       - uses: cachix/install-nix-action@7ac1ec25491415c381d9b62f0657c7a028df52a7 # tag=v24
         with:
           nix_path: nixpkgs=channel:nixpkgs-unstable
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # tag=v3.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run GoReleaser
         run: nix develop --command goreleaser release --clean
         env:
