chore: Update nixpkgs pin

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,22 +1,39 @@
+version: "2"
 linters:
-  disable-all: true
+  default: none
   enable:
-    - gosimple
+    - errcheck
+    - errorlint
+    - gosec
     - govet
     - ineffassign
-    - staticcheck
-    - typecheck
-    - unused
-    - gosec
-    - stylecheck
-    - goimports
-    - gofmt
-    - tparallel
-    - prealloc
     - misspell
+    - prealloc
+    - promlinter
+    - staticcheck
+    - tparallel
     - unconvert
     - unparam
+    - unused
     - whitespace
-    - errcheck
-    - promlinter
-    - errorlint
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
